--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c41da2c0d259caad859b442eb11cbc46",
+    "/css/app.css": "/css/app.css?id=c16ddf6b660bdf068b8dec43e0a212ea"
 }
